Adicionei um paragrafo

--- a/site-exemplo/index.html
+++ b/site-exemplo/index.html
@@ -10,5 +10,6 @@
         <h1>Olá Mundo!</h1>
         <hr>
         <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Debitis veniam non aut ea! Omnis, laborum obcaecati facere molestias accusantium nesciunt fuga corporis ipsum. Quidem delectus enim sequi alias temporibus fugit.</p>
+        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Rem dolore magnam accusamus ut, minima in animi natus repellat, temporibus quae voluptates quisquam autem sapiente accusantium? Eveniet, quo. Quaerat, quo nisi.</p>
     </body>
 </html>
